Se realizan cambios en ICA.html para que este apunte a produccion, ademas se realizan cambios en IcacontrollerMobile.js para que este sea lo mas optimo conforme a las especificaciones de salento y por ultimo en index.html se realizan cambios para que el footer no se sobreponga al autoliquidable y se añade el Iframe del autoliquidable con las proporciones adecuadas

--- a/ICA/ICA.html
+++ b/ICA/ICA.html
@@ -1069,7 +1069,7 @@
                                     <div class="jumbotron row">
                                         <h2><strong>IMPORTANTE</strong></h2>
                                         <h5 style="text-align:justify">
-                                           Señor usuario, si va a realizar el pago en línea de su Impuesto, también deberá descargar y firmar la Declaración y enviarla junto con el comprobante de pago y el soporte de retenciones a los correos electrónicos: <b>tesoreria@salento-quindio.gov.co </b>, <b> rentas@salento-quindio.gov.co</b>, de no realizarse este trámite su declaración se tendrá por no presentada. También puede realizar el pago en cualquier sucursal BANCOLOMBIA
+                                           Señor usuario, si va a realizar el pago en línea de su Impuesto, también deberá descargar y firmar la Declaración y enviarla junto con el comprobante de pago y el soporte de retenciones a los correos electrónicos: <b>tesoreria@salento-quindio.gov.co </b>, <b> rentas@salento-quindio.gov.co</b>, de no realizarse este trámite su declaración se tendrá por no presentada. También puede realizar el pago en cualquier sucursal COOPCENTRAL.
                                         </h5>
                                     </div>
                                     <div class="row">
